# Rust-packet-ingest-POC

./: .env  .gitignore  Cargo.toml  simulate_real_size_packets.py  simulate_traffic.py
packet_ingest-lib/: Cargo.toml
packet_ingest-lib/src/: capture.rs  capture_stream.rs  context.rs  db.rs  lib.rs  message.rs
packet_ingest-server/: Cargo.toml
packet_ingest-server/src/: main.rs  signal.rs  signal_ws.rs
static/: app.js  app2.js  app3.js  index.html  index2.html  worker.js
