[package]
name    = "packet_ingest-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap       = "2.2.0"
influxdb2  = { version = "0.5.2", features = ["gzip"] }
tokio      = { version = "1", features = ["full"] }
futures    = "0.3"
log        = "0.4"
thiserror  = "1.0"
libc       = "0.2"
num_cpus  = "1.16.0"
chrono    = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"